--- a/XmlRPC/XMLRpc/packages.config
+++ b/XmlRPC/XMLRpc/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="log4net" version="2.0.0" targetFramework="net45" />
   <package id="NUnit" version="2.6.2" targetFramework="net45" />
-  <package id="xmlrpcnet" version="2.5.0" requireReinstallation="True" />
+  <package id="xmlrpcnet" version="2.5.0" targetFramework="net45" />
 </packages>
